# FastAPI_learning

./: README.md  log.org  main.py  pyproject.toml  test_api.py
FruitsApp/: package-lock.json
FruitsApp/backend/: main.py  pyproject.toml  test_main.http  test_main.py
FruitsApp/frontend/src/: App.jsx  api.js
FruitsApp/frontend/src/components/: AddFruitForm.jsx  Fruits.jsx
chatBotApp/: .gitignore  HUGGINGFACE_MODELS.md  MIGRATION_SUCCESS.md  README.md  about_this_project.md  hf_inference_providers_config.json  huggingface_debug.ipynb  main.py  notes.org  pyproject.toml
chatBotApp/app/static/css/: styles.css
chatBotApp/app/static/js/: chat.js
chatBotApp/app/templates/: index.html
helloApp/: main.py  test_main.http
reactChatApp/backend/: main.py  pyproject.toml
reactChatApp/frontend/: index.html  style.css
static/: index.html  style.css
static/js/: Hello.js
