[project]
name = "chatbotapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "groq>=0.26.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.32.3",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]
